2007-08-04  Perry McFarlane  <perry_m@fastmail.fm>
* memory.c: fix PBIM1/M2_Get/PutByte in MemStateRead
* atari_ntsc.c: tweak default parameters a bit

2007-08-02  Perry McFarlane  <perry_m@fastmail.fm>
* atari_sdl.c: fix broken Caps Lock key handling
* atari_sdl.c: reduce default NTSC scanlines percentage from 20 to 5

2007-07-31  Perry McFarlane  <perry_m@fastmail.fm>
* configure.ac, INSTALL: fix for windows sdl version.  Don't use -mwindows or
  -Dmain=SDL_main and use -mno-cygwin on Cygwin.  SDL_win32_main.c is now 
  required from the sdl source.  Update documentation in INSTALL. This fixes
  the stdout.txt problem.
* atari_sdl.c: fix for windows sdl version.  Make SDL_VIDEODRIVER=directx by
  default because it is much faster.  SDL 1.2.10+ uses windib as the default.
* atari_sdl.c: added interpolated scanlines, made it the default, added
  -scanlinesnoint option to disable it

2007-07-30  Perry McFarlane  <perry_m@fastmail.fm>
* configure.ac: fix for windows sdl version.  Don't require winmm or gdi32

** 2.0.3 released on 2007-07-11

2007-04-23  Piotr Fusik  <fox@scene.pl>
* win32/msc/Makefile: fixed a problem that appeared when I switched to another
  version of NMAKE ("fatal error U1100: macro '$@' is illegal in the context
  of batch rule '.c.obj'")


2007-04-23  Paulo Lopes  <paulo.lopes@ist.utl.pt>
* win32/atari_win32.c: new command-line option "-win32keys" for keyboard
  layouts different from US (the emulator relies on Win32 API to do scan code
  translations)


2006-12-07  Paulo Lopes  <paulo.lopes@ist.utl.pt>
* win32/main.c, win32/screen_win32.[ch]: an option to run the emulator
  in a window ("-windowed" on the command line)


2006-11-05  Piotr Fusik  <fox@scene.pl>
* DOC/PORTING: an introduction to writing platform-specific part of Atari800


2006-10-31  Kostas Nakos  <knakos@gmail.com>
* util.c: Make sure user does not updir from the root in WinCE


2006-10-30  Kostas Nakos  <knakos@gmail.com>